--- a/src/components/DynamicImage/DynamicImage.module.css
+++ b/src/components/DynamicImage/DynamicImage.module.css
@@ -44,6 +44,9 @@
 }
 
 @media only screen and (max-width: 1023px) {
+  .imageBg {
+    height: 330px;
+  }
   .imageContainer {
     width: 270px;
     height: 330px;
@@ -54,7 +57,7 @@
   }
 }
 @media only screen and (max-width: 767px) {
-  .imageContainer {
-    /* width: 700px; */
+  .imageBg {
+    height: 360px;
   }
 }
