--- a/src/App.css
+++ b/src/App.css
@@ -73,8 +73,14 @@ button:focus {
   cursor: pointer;
   transition: background-color 250ms ease-in-out;
 }
+.modalBtn {
+  width: 100%;
+  height: 60px;
+}
 .btn:hover,
-.btn:focus {
+.btn:focus,
+.modalBtn:hover,
+.modalBtn:focus {
   background-color: var(--hero-background);
 }
 @media only screen and (max-width: 345px) {
@@ -95,43 +101,16 @@ button:focus {
   font-family: "Roboto", sans-serif;
 }
 
-header {
-  position: sticky;
-  top: -20px; /* for hiding */
-  z-index: 100;
-  height: 72px;
-  background-color: #fff;
+.modalTitle {
+  margin-bottom: 20px;
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.2;
+  letter-spacing: -0.02em;
 }
-.headerContainer {
-  position: sticky;
-  top: 8px; /* half of header negative top-position */
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  max-width: 1184px;
-  margin: 0 auto;
-}
-@media only screen and (max-width: 1399px) {
-  .headerContainer {
-    padding: 0 5%;
-  }
-}
-@media only screen and (max-width: 1230px) {
-  .headerContainer {
-    padding: 0 7.5%;
-  }
-}
-@media only screen and (max-width: 767px) {
-  header {
-    overflow-x: scroll;
-  }
-  .disable-scrollbars {
-    scrollbar-width: none; /* Firefox */
-    -ms-overflow-style: none; /* IE 10+ */
 
-    &::-webkit-scrollbar {
-      width: 0px;
-      background: transparent; /* Chrome/Safari/Webkit */
-    }
-  }
+.modalP {
+  margin-bottom: 40px;
+  color: rgba(18, 20, 23, 0.8);
+  line-height: 1.375;
 }
